--- a/Browze/settings.ini
+++ b/Browze/settings.ini
@@ -1,2 +1,2 @@
 [Settings]
-BackgroundImage=https://cdn.pixabay.com/photo/2015/04/23/22/00/new-year-background-736885_1280.jpg
+BackgroundImage=https://as2.ftcdn.net/jpg/04/43/65/51/1000_F_443655165_oUlckDfLpED2V9uYEywTQvBW20ueGaMz.webp
